tests/samples/negative/core/local_shadow_visible_type.ax
module local_shadow_visible_type;

struct File {
    fd: i32;
}

fn main() -> i32 {
    let File = 1;
    return File;
}
